# triangles

./: Cargo.toml  adapters.txt
src/: main.rs  shader.wgsl
